@@ -1,3 +1,10 @@
+2012-03-26  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Touch BitVector as a speculative fix for Chromium Linux.
+
+        * wtf/BitVector.h:
+        (BitVector):
+
 2012-03-23  Ryosuke Niwa  <rniwa@webkit.org>
 
         cssText should use shorthand notations
